# MLBGStippling

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build-release.yaml  windows-release.yaml
examples/memorial/: inverted.json
libstipple/: CMakeLists.txt
libstipple/src/: color.h  defines.h  map.h  point.h  stipple.h  stippler.cu  stippler.h
libstipple/src/algorithm/: algorithm.cuh  algorithm.h  collectcells.cu  easingfunctions.cuh  lindebuzogray.cu  rasterize.cu  resize.cu  shapefunctions.cuh  voronoi.cu
libstipple/src/collections/: layermaps.cuh  layervector.cuh
libstipple/src/utils/: colormap.cuh  diagnostics.cuh  hash.cuh  math.cuh
libstipple/test/: main.cpp  voronoi.tests.cpp
playground/: CMakeLists.txt
playground/src/: clickablelabel.cpp  clickablelabel.h  imageviewer.cpp  imageviewer.h  layers.h  layertoy.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  metatypes.h  toolboxwidget.cpp  toolboxwidget.h
unmixer/: Additive_mixing_layers_extraction.py  run.py
